:sparkles: Se crea el Layout Principal

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "Daniel Lozano",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
