--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "mysql2": "^3.2.3",
+    "pug": "^3.0.2",
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
